; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_varbit.c_anybit_typmodout.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_varbit.c_anybit_typmodout.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i8] c"(%d)\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32)* @anybit_typmodout to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @anybit_typmodout(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  store i32 %0, i32* %2, align 4
  %4 = call i64 @palloc(i32 64)
  %5 = inttoptr i64 %4 to i8*
  store i8* %5, i8** %3, align 8
  %6 = load i32, i32* %2, align 4
  %7 = icmp sge i32 %6, 0
  br i1 %7, label %8, label %12

8:                                                ; preds = %1
  %9 = load i8*, i8** %3, align 8
  %10 = load i32, i32* %2, align 4
  %11 = call i32 @snprintf(i8* %9, i32 64, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 %10)
  br label %14

12:                                               ; preds = %1
  %13 = load i8*, i8** %3, align 8
  store i8 0, i8* %13, align 1
  br label %14

14:                                               ; preds = %12, %8
  %15 = load i8*, i8** %3, align 8
  ret i8* %15
}

declare dso_local i64 @palloc(i32) #1

declare dso_local i32 @snprintf(i8*, i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
